--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "core-js": "^3.8.3",
+    "sweetalert2": "^11.7.28",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vuetify": "^2.6.0",
