refactor course learning outcomes

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VUE_APP_API_URL=http://localhost:3000/api/v1
+# VUE_APP_API_URL=http://157.245.55.228:1000/api/v1
+VUE_APP_API_URL=http://localhost:1000/api/v1
