--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "core-js": "^3.8.3",
+    "json-as-xlsx": "^2.5.4",
     "sweetalert2": "^11.7.28",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
