--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["bobot", "cdio", "Mahasiswa", "Rubrik", "STUDI"]
+  "cSpell.words": ["bobot", "cdio", "jurusan", "Mahasiswa", "prodi", "Rubrik", "STUDI"]
 }
