--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "json-as-xlsx": "^2.5.4",
     "sweetalert2": "^11.7.28",
     "vue": "^2.6.14",
+    "vue-google-charts": "^1.1.0",
     "vue-router": "^3.5.2",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
