--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "chart.js": "^3.8.0",
     "core-js": "^3.8.3",
     "json-as-xlsx": "^2.5.4",
     "sweetalert2": "^11.7.28",
     "vue": "^2.6.14",
+    "vue-chartjs": "^4.0.0",
     "vue-google-charts": "^1.1.0",
     "vue-router": "^3.5.2",
     "vuetify": "^2.6.0",
